--- a/package.json
+++ b/package.json
@@ -16,12 +16,39 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "typescript": "^4.6.3",
     "unplugin-vue-components": "^0.19.2",
     "vite": "^2.9.1",
+    "vite-plugin-eslint": "^1.6.0",
     "vite-ssg": "^0.19.2",
     "vue-tsc": "^0.34.6"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "endOfLine": "auto"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "prettier",
+      "eslint-plugin-vue"
+    ],
+    "env": {
+      "node": true,
+      "browser": true
+    },
+    "extends": [
+      "plugin:vue/vue3-recommended",
+      "@vue/eslint-config-prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error"
+    }
   },
   "license": "MIT"
 }
