--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "generate": "vite-ssg build",
-    "preview": "vite preview",
-    "typecheck": "vue-tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
     "element-plus": "^2.1.9",
@@ -15,19 +14,16 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.14.0",
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
-    "typescript": "^4.6.3",
     "unplugin-vue-components": "^0.19.2",
     "vite": "^2.9.1",
     "vite-plugin-eslint": "^1.6.0",
-    "vite-ssg": "^0.19.2",
-    "vue-tsc": "^0.34.6"
+    "vite-ssg": "^0.19.2"
   },
   "prettier": {
     "semi": false,
