--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.14.0",
     "eslint-plugin-vue": "^8.7.1",
+    "lorem-ipsum": "^2.0.4",
     "pinia": "^2.0.13",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
