--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "element-plus": "^2.1.9",
+    "fecha": "^4.2.3",
     "flag-icons": "^6.2.0",
     "vue": "^3.2.32",
     "vue-i18n": "^9.1.9",
