--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.1.9",
     "fecha": "^4.2.3",
     "flag-icons": "^6.2.0",
+    "uid": "^2.0.0",
     "vue": "^3.2.32",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.14"
