--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "fix": "prettier --write src/**/*.vue"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.24.3",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/paragraph": "^2.8.0",
     "@element-plus/icons-vue": "^1.1.4",
     "element-plus": "^2.1.9",
     "fecha": "^4.2.3",
